--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
   <div class="container-fluid">
     <div class="row d-flex justify-content-center">
       <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12 spot">
-        <video src="images/spot_premiere_final.mp4" autoplay preload="none" controls height="100%"></video>
+        <video src="images/spot_premiere_final.mp4" autoplay preload="none" controls height="100%" width="1005"></video>
       </div>
     </div>
   </div>
